Add a config option to run trends check on start

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -3,5 +3,6 @@
   "apiToken": "Generate_From_Mastodon_Development_Area_Grant_Admin_Read_Write",
   "instanceName": "BitForged Social",
   "trendNotificationChannelId": "A Discord Channel ID (Numerical)",
-  "cronString": "*/30 * * * *"
+  "cronString": "*/30 * * * *",
+  "runOnStart": false
 }
